--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -67,6 +67,7 @@
   --blue-hover: #1CABE9;
   --blue-active: #00A0E6;
   --gray-3: #CCC;
+  --space: 20px;
 }
 
 * {
@@ -86,6 +87,9 @@ body {
   flex-direction: column;
   background-color: var(--bg-color);
 }
+body > main {
+  min-height: calc(100vh - 400px);
+}
 
 hr.divider {
   background-color: var(--gray-3);
@@ -96,6 +100,11 @@ hr.divider {
   align-self: center;
 }
 
+@media (min-width: 1200px) {
+  body > main {
+    min-height: calc(100vh - 342px);
+  }
+}
 #header {
   min-width: 320px;
   width: 100%;
@@ -226,9 +235,17 @@ hr.divider {
   text-decoration: none;
   outline: none;
   cursor: pointer;
+  border-radius: 6px;
+  background: transparent;
+  color: var(--black);
   background-color: var(--green);
   color: var(--white);
-  border-radius: 6px;
+}
+#header .menu .btn-register:hover {
+  background-color: var(--black-10);
+}
+#header .menu .btn-register:active {
+  background-color: var(--black-75);
 }
 #header .menu .btn-register:hover {
   background-color: var(--green-hover);
@@ -338,6 +355,95 @@ hr.divider {
   }
   #header .menu .footer > div {
     height: 100px;
+  }
+}
+#footer {
+  width: 100%;
+  min-width: 320px;
+  background-color: var(--dark-0);
+  position: relative;
+  flex-direction: column;
+  padding: var(--space);
+  align-items: center;
+  color: var(--gray-0);
+}
+#footer button {
+  position: absolute;
+  right: var(--space);
+  background-color: var(--gray-6);
+  box-shadow: var(--black) 0 3px 6px;
+  border: none;
+  border-radius: 50%;
+  width: 70px;
+  height: 70px;
+  outline: none;
+  align-items: center;
+  top: -35px;
+  z-index: 1;
+  cursor: pointer;
+}
+#footer button:hover {
+  background-color: var(--white);
+}
+#footer .columns {
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+}
+#footer .columns .links {
+  display: none;
+}
+#footer .columns ul {
+  margin: 0;
+  padding: 0;
+  width: 300px;
+  flex-direction: column;
+}
+#footer .columns ul li {
+  list-style: none;
+  font-size: 16px;
+  padding: 0.5em 0;
+}
+#footer .columns ul li a {
+  color: var(--gray-0);
+  text-decoration: none;
+}
+#footer .columns ul li.title {
+  font-weight: bold;
+  font-size: 20px;
+}
+#footer .columns ul li.social {
+  align-items: center;
+}
+#footer .columns ul li.social a {
+  margin-right: 1em;
+}
+#footer .columns ul li.social img {
+  height: 24px;
+}
+#footer .columns .logo {
+  margin: var(--space) 0;
+}
+#footer p {
+  font-weight: bold;
+  font-size: 18px;
+}
+
+@media (min-width: 1200px) {
+  #footer {
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-bottom: 0;
+  }
+  #footer .columns {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  #footer .columns .links {
+    display: flex;
+  }
+  #footer .columns ul li a:hover {
+    color: var(--white);
   }
 }
 
