--- a/assets/sass/default.scss
+++ b/assets/sass/default.scss
@@ -14,6 +14,9 @@ body {
     margin: 0;
     flex-direction: column;
     background-color: var(--bg-color);
+    > main {
+        min-height: calc(100vh - 400px);
+    }
 }
 
 // Quando a tag hr tiver a class divider
@@ -26,5 +29,13 @@ hr {
         margin: 3em 0;
         border: none;
         align-self: center;
+    }
+}
+
+@media (min-width: 1200px) {
+    body {
+        > main {
+            min-height: calc(100vh - 342px);
+        }
     }
 }
