--- a/assets/sass/header.scss
+++ b/assets/sass/header.scss
@@ -4,7 +4,7 @@
     height: 60px;
     background-color: var(--gray-5);
     position: relative;
-    z-index: 3;
+    z-index: 5;
     .italy {
         width: 100%;
         position: absolute;
@@ -22,7 +22,7 @@
         top: 15px;
         width: 72px;
         right: calc(50vw - 36px);
-        z-index: 5;
+        z-index: 7;
     }
     .menu {
         transition: right .5s ease-in-out;
@@ -33,7 +33,7 @@
         position: fixed;
         right: -300px;
         top: 0;
-        z-index: 4;
+        z-index: 6;
         flex-direction: column;
         justify-content: space-between;
         hr {
@@ -68,10 +68,12 @@
             flex-direction: column;
             ul {
                 margin: 0;
-                margin-top: 179px;
                 padding: 0;
                 width: 100%;
                 flex-direction: column;
+                margin-top: 169px;
+                max-height: calc(100vh - 250px);
+                overflow-y: auto;
                 li {
                     padding: 14px 0;
                     list-style: none;
@@ -115,7 +117,6 @@
                     flex-direction: column;
                     flex: 1;
                 }
-
                 a {
                     color: var(--dark-0);
                     text-decoration: none;
@@ -126,38 +127,28 @@
                         font-size: 12px;
                     }
                 }
-
             }
-
         }   
-        
         .btn-register {
             margin: 20px;
             width: calc(300px - 40px);
             @include button-green;
         }
-
     }
-
     button {
         background: none;
         border: none;
         outline: none;
         padding: 13px;
     }
-
     #btn-open, #btn-close {
         position: absolute;
         right: 0;
     }
-
 }
-
 .open-menu {
     overflow: hidden;
-    
     #header {
-
         .overlay {
             position: fixed;
             top: 0;
@@ -165,14 +156,11 @@
             width: 100vh;
             height: 100vh;
             background-color: var(--dark-1);
-            z-index: 4;
-
+            z-index: 5;
         }
-
         .menu {
             right: 0;
         }
-
         .logo {
             right: 87px;
             width: 120px;
