--- a/assets/sass/home.scss
+++ b/assets/sass/home.scss
@@ -74,6 +74,21 @@
         .gallery {
             flex-direction: row;
         }
+        > header {
+            ul {
+                display: flex;
+                color: var(--white);
+                font-size: 30px;
+                margin: 0;
+                padding: 0; 
+                li + li {
+                    margin-left: calc( 2 * var(--space) );
+                }
+            }
+            h1 {
+                margin-top: 0;
+            }
+        }
     }
 }
 
