--- a/assets/sass/schedules-payment.scss
+++ b/assets/sass/schedules-payment.scss
@@ -58,3 +58,40 @@
         }
     }
 }
+
+@media (min-width: 1200px) {
+    #schedules-payment {
+        position: initial;
+        > header {
+            height: 160px;
+            min-height: 160px;
+            h1 {
+                display: block;
+            }
+        }
+        > main {
+            align-items: flex-start;
+            form {
+                max-width: 900px;
+                justify-content: space-between;
+                .form-creditcard {
+                    .form-card {
+                        position: static; // ou initial, dá na mesma
+                        justify-content: center;
+                        padding-left: var(--space);
+                        .faces {
+                            width: 100%;
+                            margin-top: -17px;
+                            &.flipped {
+                                transform: translateX(-76px) rotateY(180deg);
+                            }
+                            svg {
+                                width: 340px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
